--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/bifot/pass#readme",
   "dependencies": {
+    "cli-table": "^0.3.5",
     "commander": "^6.2.0",
     "copy-paste": "^1.3.0",
     "simple-encryptor": "^4.0.0"
